# aws-lambda-rust

./: .gitignore  Cargo.toml  README.md  aws.sh  buildspec.yml  run.sh  setup.sh
_infra/: init.sh  sam.yml
_infra/cfn/: pipeline.yml
src/: event.rs  main.rs
