[package]
name = "aws-lambda-rust-boilerplate"
version = "0.1.0"
authors = ["Robin Schultz <robin@anigenero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "^0.1"
log = "^0.4"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
simple_logger = "^1"
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]

[[bin]]
name = "bootstrap"
path = "src/main.rs"
